#
# provide-testkit/pyproject.toml
#
# Testing utilities and fixtures for the provide ecosystem.
#

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provide-testkit"
description = "Testing utilities and fixtures for the provide ecosystem."
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Tim Perkins", email = "code@tim.life" },
]
maintainers = [
    { name = "provide.io", email = "code@provide.io" },
]
keywords = ["testing", "fixtures", "mocking", "pytest", "provide"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "provide-foundation>=0.3.0",  # Version constraint - allows editable install when used as dev dep
    "click>=8.3.1", # For CLI testing utilities - SHARED with Foundation
    # Core testing - minimum version constraints for stability
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "mkdocs-material>=9.7.1",
]

[project.urls]
Homepage = "https://foundry.provide.io/testkit/"
Documentation = "https://foundry.provide.io/testkit/"
Repository = "https://github.com/provide-io/provide-testkit"
Issues = "https://github.com/provide-io/provide-testkit/issues"

[project.optional-dependencies]

# Comprehensive code quality tools (no upper bounds - use latest)
quality = [
    "ruff",
    "mypy",
    "bandit",
    "coverage[toml]",
    "radon",
    "interrogate",  # Note: requires 'py' package with known vulnerability (PYSEC-2022-42969, low risk)
    "mutmut",
]

# Advanced type checking (no upper bounds - use latest)
typecheck = [
    "mypy",
    "pyright",
    "pyre-check",
    "pyre-extensions",
    "pyrefly",
    "ty",
    "types-cryptography",
    "types-grpcio",
    "types-toml",
    "types-protobuf",
    "types-click",
    "types-pyyaml",
    "types-psutil",
]

# Property-based and advanced testing (no upper bounds - use latest)
advanced-testing = [
    "hypothesis",
    "freezegun",
    "behave",
    "pytest-benchmark",
    "pytest-testmon",
    "pytest-json-report",
]

# Performance profiling (no upper bounds - use latest)
profiling = [
    "memray",
    "viztracer",
]

# Network and HTTP testing (no upper bounds - use latest)
transport = [
    "httpx>=0.28.1",  # SHARED with Foundation
    "pytest-httpx",
    "h2",
]

# Cryptography (no upper bounds - use latest)
crypto = [
    "cryptography>=45.0.7",  # SHARED with Foundation
    "types-cryptography",
]

# System monitoring (no upper bounds - use latest)
process = [
    "psutil>=7.0.0",  # SHARED with Foundation
    "setproctitle>=1.3.7",  # SHARED with Foundation - for .pth blocker
]

# gRPC/Protobuf development (no upper bounds - use latest)
grpc = [
    "grpc-stubs",
    "grpcio>=1.76.0",
    "grpcio-tools",
    "grpcio-health-checking",
]

# Build and release tools (no upper bounds - use latest)
build = [
    "hatch",
    "twine",
    "uv",
    "pre-commit",
]

# Documentation tools - comprehensive set for entire ecosystem (no upper bounds - use latest)
docs = [
    # Core MkDocs
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "mike",

    # Organization and navigation
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",

    # Content enhancement
    "markdown-callouts",
    "markdown-exec",
    "markdown-include",
    "pymdown-extensions",

    # Advanced plugins
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
    "mkdocs-coverage",
    "mkdocs-llmstxt",
    "mkdocs-minify-plugin",
    "mkdocs-redirects",

    # Code quality
    "linkchecker",
    "mkdocs-htmlproofer-plugin",

    # Additional dependencies
    "pygments",
    "griffe",
    "watchdog",
    "pyyaml",
]

# Misc utilities (no upper bounds - use latest)
utils = [
    "pyyaml",
    "reuse",
    "tabulate",
    "sapp",
]

# Fuzzing and test generation (no upper bounds - use latest)
fuzzing = [
    "pynguin",
]

# Comprehensive security scanning (no upper bounds - use latest)
security = [
    "bandit",           # Python SAST (static application security testing)
    "safety",           # Dependency vulnerability scanner (PyUp database)
    "pip-audit",        # PyPI security advisory scanner
    # Note: semgrep removed due to dependency conflicts with mkdocs ecosystem
    # Install separately: uv tool install semgrep
    # Note: gitleaks and trufflehog are Go binaries, not pip packages
    # They should be installed via system package manager or downloaded binaries
    # Wrappers will check for their availability at runtime
]

# Convenience groups
standard = [
    "provide-testkit[quality,transport,crypto,process]",
]

grpc-dev = [
    "provide-testkit[standard,grpc,typecheck]",
]

pyvider-dev = [
    "provide-testkit[standard,advanced-testing,typecheck,grpc,build,profiling,security]",
]

all = [
    "provide-testkit[quality,typecheck,advanced-testing,profiling,transport,crypto,process,grpc,build,docs,utils,security,fuzzing]",
]

dev = [
    "provide-testkit[quality,advanced-testing]",
]

# Self-referential docs for testkit itself
docs-standalone = [
    "provide-testkit[docs]",
]

[project.scripts]
provide-testkit = "provide.testkit.main:main"
provide-testkit-install-pth = "provide.testkit._install_pth:_cli_install"
provide-testkit-uninstall-pth = "provide.testkit._install_pth:_cli_uninstall"

[project.entry-points.pytest11]
provide_testkit = "provide.testkit.pytest_plugin"

[dependency-groups]
dev = [
    "mkdocs-autorefs",
    "mkdocs-macros-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "provide-testkit[quality,advanced-testing]",
]
docs = [
    # provide-foundry - install separately for docs builds
]

################################################################################
# Build Configuration
################################################################################

[tool.setuptools]
packages = {find = {where = ["src"]}}

# Include .pth file as package data
# It will be installed inside the provide.testkit package
# We'll symlink/copy it to site-packages root via entry point
[tool.setuptools.package-data]
"provide.testkit" = ["*.pth"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

################################################################################
# Testing
################################################################################

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -s --strict-markers --strict-config"
# Parallel execution: pytest -n <workers> (range: 2-16, recommend: CPU cores or 8, max: 16 to avoid xdist hang)
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

################################################################################
# Code Quality
################################################################################

[tool.ruff]
target-version = "py311"
line-length = 111
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "BLE", "C90", "PIE", "PLR", "S", "SIM", "PTH", "RUF"]
ignore = [
    "ANN401",   # any-type (too restrictive)
    "BLE001",   # blind-except (too restrictive for cleanup patterns)
    "B008",     # function-call-in-default-argument (Click uses this pattern)
    "E501",     # line-too-long (handled by formatter)
    "S101",     # assert (valid in tests)
    "S104",   # binding-to-all-interfaces (intentional for servers)
    "S108",     # hardcoded-temp-file (/tmp is fine for our use cases)
    "S310",     # suspicious-url-open-for-protocol (URLs are controlled)
    "S603",     # subprocess-without-shell-equals-true (trusted input)
    "S607",     # start-process-with-partial-path (trusted executables)
    "PLR0911",  # too-many-return-statements (refactor later)
    "PLR0912",  # too-many-branches (refactor later)
    "PLR0913",  # too-many-arguments (common in config classes)
    "PLR0915",  # too-many-statements (refactor later)
    "PLR2004",  # magic-value-comparison (too noisy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "B017", "C901", "E402", "PLR0124", "PLR1714", "PTH101", "PTH109", "RUF022", "S102", "S103", "S105", "S106", "S110", "S307", "S311", "S324", "S602", "SIM105", "SIM108", "SIM117"]
"examples/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "C901", "S608"]
"src/provide/testkit/**" = ["F841", "S110", "S112", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["provide", "tests"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "workenv"]

################################################################################
# Security Scanning Allowlist
################################################################################

[tool.security]
# Paths to exclude from secret scanning (TruffleHog, GitGuardian, Gitleaks)
# Run: we security generate (via wrknv) to regenerate tool configs
description = "Test fixtures with example credentials - intentionally committed"
allowed_paths = [
    # Test EC private keys used for mTLS/crypto testing fixtures
    # Current location
    "src/provide/testkit/crypto/fixtures.py",
    # Legacy location (in git history before rename)
    "src/provide/testkit/crypto.py",
    # Example files with test API keys/credentials
    "examples/**/*.py",
    # Legacy security scan output files (in git history)
    ".security/**",
]
